Bug 1450099 - Only enter the SCROLLBAR_DRAG state if the scrollbar thumb is clicked. r=kats

MozReview-Commit-ID: HkNvYQP0KqC